Change version upload method

--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -5,3 +5,8 @@ html, body, #app-root
 
 body
     background-image: url('/assets/images/background.jpg')
+
+button
+    &:focus
+        outline: none
+        box-shadow: none!important
