Add image url getter to server, add few methods to wallpaperize cli

--- a/desktop/src/styles.sass
+++ b/desktop/src/styles.sass
@@ -1,4 +1,8 @@
 @import '~bootstrap/dist/css/bootstrap.min.css'
+// @import '~font-awesome/css/font-awesome.min.css'
     
 body
     margin: 12px
+
+.pointer
+    cursor: pointer
