--- a/desktop/src/styles.sass
+++ b/desktop/src/styles.sass
@@ -1,8 +1,12 @@
 @import '~bootstrap/dist/css/bootstrap.min.css'
-// @import '~font-awesome/css/font-awesome.min.css'
     
 body
-    margin: 12px
+    // margin: 12px
+    height: 100vh
+    overflow: hidden
 
 .pointer
     cursor: pointer
+
+#app
+    height: 100%
