--- a/desktop/src/renderer/menu/Menu.scss
+++ b/desktop/src/renderer/menu/Menu.scss
@@ -1,12 +1,16 @@
 @import '../../variables.sass';
 
 .menu {
+    background-color: $grey;
+}
+
+.menu-sidebar {
     height: 100vh;
     width: 25px;
-    background-color: $grey;
+    // background-color: $grey;
 
-    &.opened {
-        width: 50%;
-    }
+    // &.opened {
+    //     width: 50%;
+    // }
 }
     
