--- a/desktop/app/app.global.css
+++ b/desktop/app/app.global.css
@@ -8,6 +8,8 @@ body {
   position: relative;
   color: white;
   font-family: Arial, Helvetica, Helvetica Neue, serif;
+  padding: 0;
+  margin: 0;
 }
 
 :root {
