--- a/desktop/app/app.global.css
+++ b/desktop/app/app.global.css
@@ -4,20 +4,26 @@
  */
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
+:root {
+  box-sizing: border-box;
+
+  --primary-color: #34495e;
+  --secondary-color: #ecf0f1;
+  --accent-color: #e67e22;
+}
+
 body {
   position: relative;
-  color: white;
   font-family: Arial, Helvetica, Helvetica Neue, serif;
   padding: 0;
   margin: 0;
-}
-
-:root {
-  box-sizing: border-box;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 * {
   box-sizing: inherit;
+  color: inherit;
 }
 
 li {
