--- a/desktop/app/components/ImageOverlay/index.module.scss
+++ b/desktop/app/components/ImageOverlay/index.module.scss
@@ -27,6 +27,16 @@
   }
 }
 
+.toolbar {
+  background-color: #2c3e50;
+  position: absolute;
+  margin: 0 auto;
+  bottom: 0;
+  width: 80vw;
+  padding: 1em;
+  z-index: 1;
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -34,4 +44,9 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.87);
+}
+
+.status {
+  padding-left: 0.5em;
+  font-size: 0.8rem;
 }
